--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,11 +1,11 @@
-deploy.ant.properties.file=C:\\Users\\USER\\AppData\\Roaming\\NetBeans\\23\\tomcat80.properties
+deploy.ant.properties.file=/Users/evaldovisk/Library/Application Support/NetBeans/24/tomcat80.properties
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\USER\\Downloads\\faculdade\\mysql-connector-java-8.0.30.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/Leonardo/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Users/USER/Downloads/faculdade/apache-tomcat-8.5.86
-j2ee.server.instance=tomcat80:home=C:\\Users\\USER\\Downloads\\faculdade\\apache-tomcat-8.5.86
+j2ee.server.home=/Users/evaldovisk/Downloads/apache-tomcat-8.5.86
+j2ee.server.instance=tomcat80:home=/Users/evaldovisk/Downloads/apache-tomcat-8.5.86
 j2ee.server.middleware=C:/Users/Leonardo/GlassFish6
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\USER\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=/Users/evaldovisk/Library/Application Support/NetBeans/24/build.properties
